--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,39 @@
-spring.application.name=studyChat
+# Server-Konfiguration
+server.port=8080
+
+# Thymeleaf-Konfiguration
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Logging-Konfiguration
+logging.level.root=INFO
+logging.level.com.hhn.studyChat=DEBUG
+logging.level.org.springframework.web=INFO
+
+# Crawler-Konfiguration
+crawler.output.dir=./collected-content
+crawler.max.threads=2
+http.agent.name=StudyChat-Bot
+http.agent.version=1.0
+http.agent.description=StudyChat Crawler für Hochschule Heilbronn
+http.agent.url=https://www.hs-heilbronn.de
+http.agent.email=contact@example.com
+
+# RAG-System-Konfiguration
+qdrant.host=localhost
+qdrant.port=6333
+
+# OpenAI API-Konfiguration (für LLM)
+# Hinweis: Tatsächlicher API-Schlüssel sollte über Umgebungsvariablen oder sichere Konfiguration gesetzt werden
+openai.api.key=${OPENAI_API_KEY:your-api-key-here}
+openai.model=gpt-3.5-turbo
+
+# LangChain Konfiguration
+langchain.chunk-size=500
+langchain.chunk-overlap=50
+
+# Maximale Upload-Größe für Multipart/Form-Daten
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
