--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,13 @@ langchain.chunk-overlap=50
 # Maximale Upload-Größe für Multipart/Form-Daten
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+use.hhn.webui=true
+hhn.webui.baseurl=https://inference.it.hs-heilbronn.de
+hhn.webui.api.key=sk-f2c16f4332b1408bb8c667cac64c4717
+hhn.webui.model=mistral:latest
+
+openwebui.host=inference.it.hs-heilbronn.de
+openwebui.port=3000
+openwebui.model=mistral-latest
+openwebui.api.key=sk-f2c16f4332b1408bb8c667cac64c4717
