--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,35 +15,71 @@ logging.level.org.springframework.web=INFO
 # Crawler-Konfiguration
 crawler.output.dir=./collected-content
 crawler.max.threads=2
+
+# === OPEN WEBUI KONFIGURATION (FUNKTIONIERT!) ===
+# FINALE Konfiguration basierend auf erfolgreichen Tests
+openwebui.host=inference.it.hs-heilbronn.de
+openwebui.port=443
+openwebui.ssl=true
+# API Key von HHN Open WebUI
+openwebui.api.key=sk-c938802592754beeb966b7a8e6b67056
+# Verfügbare Modelle: mistral:latest, deepseek-v2:latest, llama3:latest, etc.
+openwebui.model=mistral:latest
+
+# Alternative Modelle (kommentiert):
+# openwebui.model=deepseek-v2:latest
+# openwebui.model=llama3:latest
+# openwebui.model=openchat:latest
+# openwebui.model=phi3.5:latest
+
+# === QDRANT KONFIGURATION (VECTOR DATABASE) ===
+qdrant.host=localhost
+qdrant.port=6334
+# Falls Qdrant nicht verfügbar ist, auf In-Memory Store zurückfallen
+use.inmemory.store=false
+
+# === VERALTETE OPENAI KONFIGURATION (NICHT MEHR VERWENDET) ===
+# Diese Werte werden nicht mehr verwendet, da wir auf lokale Open WebUI umgestellt haben
+# openai.api.key=${OPENAI_API_KEY:not-used-anymore}
+# openai.model=gpt-3.5-turbo
+
+# === HTTP AGENT KONFIGURATION ===
 http.agent.name=StudyChat-Bot
 http.agent.version=1.0
 http.agent.description=StudyChat Crawler für Hochschule Heilbronn
 http.agent.url=https://www.hs-heilbronn.de
 http.agent.email=contact@example.com
 
-# RAG-System-Konfiguration
-qdrant.host=localhost
-qdrant.port=6333
-
-# OpenAI API-Konfiguration (für LLM)
-# Hinweis: Tatsächlicher API-Schlüssel sollte über Umgebungsvariablen oder sichere Konfiguration gesetzt werden
-openai.api.key=${OPENAI_API_KEY:your-api-key-here}
-openai.model=gpt-3.5-turbo
-
-# LangChain Konfiguration
+# === LANGCHAIN KONFIGURATION ===
 langchain.chunk-size=500
 langchain.chunk-overlap=50
 
-# Maximale Upload-Größe für Multipart/Form-Daten
+# === MULTIPART UPLOAD KONFIGURATION ===
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-use.hhn.webui=true
-hhn.webui.baseurl=https://inference.it.hs-heilbronn.de
-hhn.webui.api.key=sk-f2c16f4332b1408bb8c667cac64c4717
-hhn.webui.model=mistral:latest
+# === DEVELOPMENT/PRODUCTION UMGEBUNG ===
+# Für Entwicklung
+spring.profiles.active=dev
 
-openwebui.host=inference.it.hs-heilbronn.de
-openwebui.port=3000
-openwebui.model=mistral-latest
-openwebui.api.key=sk-f2c16f4332b1408bb8c667cac64c4717
+# === ERWEITERTE OPEN WEBUI OPTIONEN ===
+# Falls die Hochschul-Installation einen anderen Endpunkt verwendet
+# openwebui.host=your-university-openwebui.domain.de
+# openwebui.port=443
+# openwebui.ssl=true
+
+# === BACKUP KONFIGURATION FALLS OPEN WEBUI NICHT VERFÜGBAR ===
+# Fallback auf In-Memory Embedding Store
+embedding.fallback.inmemory=true
+
+# === PERFORMANCE TUNING ===
+# Anzahl der Dokumente die parallel verarbeitet werden
+rag.processing.batch.size=10
+# Timeout für LLM Anfragen (in Sekunden)
+rag.llm.timeout=30
+
+# === DEBUGGING ===
+# Detaillierte Logs für RAG-System
+logging.level.com.hhn.studyChat.service.RAGService=DEBUG
+# Logs für LangChain4j
+logging.level.dev.langchain4j=INFO
