changed 'ü' to 'ue' in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ openwebui.port=443
 openwebui.ssl=true
 # API Key von HHN Open WebUI
 openwebui.api.key=sk-c938802592754beeb966b7a8e6b67056
-# Verfügbare Modelle: mistral:latest, deepseek-v2:latest, llama3:latest, etc.
+# Verfuegbare Modelle:
 openwebui.model=mistral:latest
 
 # Alternative Modelle (kommentiert):
@@ -35,18 +35,14 @@ openwebui.model=mistral:latest
 # === QDRANT KONFIGURATION (VECTOR DATABASE) ===
 qdrant.host=localhost
 qdrant.port=6334
-# Falls Qdrant nicht verfügbar ist, auf In-Memory Store zurückfallen
+# Falls Qdrant nicht verfuegbar ist, auf In-Memory Store zurueckfallen
 use.inmemory.store=false
 
-# === VERALTETE OPENAI KONFIGURATION (NICHT MEHR VERWENDET) ===
-# Diese Werte werden nicht mehr verwendet, da wir auf lokale Open WebUI umgestellt haben
-# openai.api.key=${OPENAI_API_KEY:not-used-anymore}
-# openai.model=gpt-3.5-turbo
 
 # === HTTP AGENT KONFIGURATION ===
 http.agent.name=StudyChat-Bot
 http.agent.version=1.0
-http.agent.description=StudyChat Crawler für Hochschule Heilbronn
+http.agent.description=StudyChat Crawler fuer Hochschule Heilbronn
 http.agent.url=https://www.hs-heilbronn.de
 http.agent.email=contact@example.com
 
@@ -59,27 +55,21 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # === DEVELOPMENT/PRODUCTION UMGEBUNG ===
-# Für Entwicklung
+# Fuer Entwicklung
 spring.profiles.active=dev
 
-# === ERWEITERTE OPEN WEBUI OPTIONEN ===
-# Falls die Hochschul-Installation einen anderen Endpunkt verwendet
-# openwebui.host=your-university-openwebui.domain.de
-# openwebui.port=443
-# openwebui.ssl=true
-
-# === BACKUP KONFIGURATION FALLS OPEN WEBUI NICHT VERFÜGBAR ===
+# === BACKUP KONFIGURATION FALLS OPEN WEBUI NICHT VERFEUGBAR ===
 # Fallback auf In-Memory Embedding Store
 embedding.fallback.inmemory=true
 
 # === PERFORMANCE TUNING ===
 # Anzahl der Dokumente die parallel verarbeitet werden
 rag.processing.batch.size=10
-# Timeout für LLM Anfragen (in Sekunden)
+# Timeout fuer LLM Anfragen (in Sekunden)
 rag.llm.timeout=30
 
 # === DEBUGGING ===
-# Detaillierte Logs für RAG-System
+# Detaillierte Logs fuer RAG-System
 logging.level.com.hhn.studyChat.service.RAGService=DEBUG
-# Logs für LangChain4j
+# Logs fuer LangChain4j
 logging.level.dev.langchain4j=INFO
